--- a/blocks/featured-content/featured-content.css
+++ b/blocks/featured-content/featured-content.css
@@ -54,7 +54,7 @@
 }
 
 .featured-content.block.adobe .featured-content-image {
-  border: 6px solid var(--spectrum-red-1400);
+  border: 6px solid var(--exlm-spectrum-red-1400);
 }
 
 .featured-content.block.external .featured-content-image {
@@ -86,7 +86,7 @@
 
 .featured-content.block.adobe .featured-content-image .source-tag {
   display: block;
-  background-color: var(--spectrum-red-1400);
+  background-color: var(--exlm-spectrum-red-1400);
 }
 
 .featured-content.block.external .featured-content-image .source-tag {
